# ihamster

./: .gitignore  LICENSE  README.md
doc/: coding_convention.txt
include/adapter/: config.hpp  filesystem.hpp  image.hpp  plotcirc.hpp  sqlite.hpp
include/alg/: diagram.hpp  filter.hpp  line.hpp  line2.hpp  paint.hpp  pattern.hpp  pattern_study.hpp  pattern_sub.hpp  plotcirc_db.hpp  seg_object.hpp  sobel.hpp  spot.hpp  spot_detector.hpp  watershed.hpp
include/cmn/: apply.hpp  fwd.hpp  image.hpp  image_utils.hpp  log.hpp  name.hpp  plotcirc.hpp  point.hpp  rect.hpp  util.hpp  utils.hpp
include/core/: context.hpp  frame_recognizer.hpp
proj/codelite/: ihamster.project  ihamster.workspace
proj/kdevelop/: ..src  .kdev_include_paths  CMakeLists.txt  project.kdev4
proj/kdevelop/.kdev4/: project.kdev4
proj/qt-creator/: CMakeLists.txt
proj/xcode/iHamster.xcodeproj/: project.pbxproj
proj/xcode/iHamster.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: CMakeLists.txt
src/adapter/: config.cpp  filesystem.cpp  image.cpp  plotcirc.cpp  sqlite.cpp
src/alg/: diagram.cpp  filter.cpp  paint.cpp  paint2.cpp  paint_with_hint.2.cpp  paint_with_hint.cpp  paint_with_hint2.cpp  pattern_study.cpp  plotcirc_db.cpp  readme.txt  seg_object.cpp  sobel.cpp  spot.cpp  spot_detector.cpp  watershed.cpp  watershed2.cpp  watershed3.cpp
src/app/: main.cpp
src/cmn/: image.cpp  image_utils.cpp  log.cpp  plotcirc.cpp
src/os/mac/adapter/: image.mm
src/test/image_open_save/: main.cpp
